scripts/yaml/basket.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basket
spec:
  template:
    metadata:
      labels:
        app: aksworksop
        component: basket
    spec:
      containers:
      - name: basket
        image: testeduacr.azurecr.io/basket
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-key
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworksop
    component: basket
  name: basket
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: aksworksop
    component: basket
