scripts/yaml/catalog.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog
spec:
  template:
    metadata:
      labels:
        app: aksworksop
        component: catalog
    spec:
      containers:
      - name: catalog
        image: testeduacr.azurecr.io/catalog
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-key
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworksop
    component: catalog
  name: catalog
spec:
  ports:
  - port: 80
  selector:
    app: aksworksop
    component: catalog
