scripts/yaml/order.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: order
spec:
  template:
    metadata:
      labels:
        app: aksworksop
        component: order
    spec:
      containers:
      - name: order
        image: testeduacr.azurecr.io/order
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-key
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworksop
    component: order
  name: order
spec:
  ports:
  - port: 80
  selector:
    app: aksworksop
    component: order
