scripts/yaml/sql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sql
spec:
  template:
    metadata:
      labels:
        app: aksworksop
        component: sql
    spec:
      containers:
      - name: sql
        image: microsoft/mssql-server-linux:2017-latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworksop
    component: sql
  name: sql
spec:
  ports:
  - port: 1433
  selector:
    app: aksworksop
    component: sql
